force-app/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Fon_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Fon_Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>