force-app/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Fon_Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Fon_Employee_Name__c</fullName>
    <label>Employee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>