force-app/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Fon_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Fon_Occupation__c</fullName>
    <label>Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>